--- a/src/index.css
+++ b/src/index.css
@@ -27,4 +27,5 @@ body {
   font-family: "Netflix", Helvetica, Arial, sans-serif;
   font-weight: 400;
   font-size: 16px;
+  background-color: black;
 }
